[package]
name = "eth_checksum"
version = "0.1.2"
authors = ["Miguel Mota <hello@miguelmota.com>"]
description = "Ethereum address checksum"
readme = "README.md"
license = "MIT"
repository = "https://github.com/miguelmota/rust-eth-checksum"
edition = "2018"

[dependencies]
sha3 = "0.10.8"
digest = "0.10.7"
[[bin]]
name = "eth_checksum"
